fix mobile nav-stuck padding for body

--- a/assets/styles/layouts/_nav.scss
+++ b/assets/styles/layouts/_nav.scss
@@ -282,7 +282,7 @@
 
 // Nav is stuck
 body.nav-stuck {
-  padding-top: 54px;
+  padding-top: 74px;
   .nav-main {
     position: fixed;
     top: 0;
